set_global(G_INCLUDE ${G_INCLUDE}  ${SRC_CONTROLLER_DIR})
include_directories(${G_INCLUDE})

set(SRC_CONTROLLER_BASE_DIR ${SRC_CONTROLLER_DIR}/base)
set(SRC_CONTROLLER_APP_DIR ${SRC_CONTROLLER_DIR}/app)
set(SRC_CONTROLLER_NET_DIR ${SRC_CONTROLLER_DIR}/net)
set(SRC_CONTROLLER_CMD_DIR ${SRC_CONTROLLER_DIR}/cmd)
set(SRC_CONTROLLER_TOAST_DIR ${SRC_CONTROLLER_DIR}/toast)
set(SRC_CONTROLLER_SETTING_DIR ${SRC_CONTROLLER_DIR}/setting)
set(SRC_CONTROLLER_MSG_DIR ${SRC_CONTROLLER_DIR}/msg)

add_subdirectory(${SRC_CONTROLLER_BASE_DIR})
add_subdirectory(${SRC_CONTROLLER_APP_DIR})
add_subdirectory(${SRC_CONTROLLER_CMD_DIR})
add_subdirectory(${SRC_CONTROLLER_NET_DIR})
add_subdirectory(${SRC_CONTROLLER_TOAST_DIR})
add_subdirectory(${SRC_CONTROLLER_SETTING_DIR})
add_subdirectory(${SRC_CONTROLLER_MSG_DIR})

