set(SRC_VIEW_HOME_DIR ${SRC_VIEW_DIR}/home)
set(SRC_VIEW_MESSAGE_DIR ${SRC_VIEW_DIR}/message)
set(SRC_VIEW_RESOURCE_DIR ${SRC_VIEW_DIR}/resource)
set(SRC_VIEW_SETTING_DIR ${SRC_VIEW_DIR}/setting)
set(SRC_VIEW_COMP_DIR ${SRC_VIEW_DIR}/comp)
set(SRC_VIEW_APP_DIR ${SRC_VIEW_DIR}/app)
add_subdirectory(${SRC_VIEW_COMP_DIR})
add_subdirectory(${SRC_VIEW_APP_DIR})
add_subdirectory(${SRC_VIEW_MESSAGE_DIR})
add_subdirectory(${SRC_VIEW_RESOURCE_DIR})
add_subdirectory(${SRC_VIEW_SETTING_DIR})
add_subdirectory(${SRC_VIEW_HOME_DIR})
